--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Cache-control" content="no-cache">
     <meta http-equiv="Cache" content="no-cache">
-    <title>听听幽灵会唱的歌~</title>
+    <title>温柔小企鹅的歌单~</title>
   </head>
   <body>
     <div id="root"></div>
